--- a/Registro.html
+++ b/Registro.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
+    <link rel="stylesheet" href="Registro.css">
 </head>
 <body>
-    
+    <div class="background-image">
+        <div class="register-box">
+            <div class="logo"></div>
+            <div class="Avion"></div> 
+            <h2>Registro</h2>
+            <form action="#" method="post">
+                <div class="textbox">
+                    <input type="text" placeholder="Nombre" name="nombre" required>
+                </div>
+                <div class="textbox">
+                    <input type="text" placeholder="Apellido" name="apellido" required>
+                </div>
+                <div class="textbox">
+                    <input type="email" placeholder="Correo electrónico" name="email" required>
+                </div>
+                <div class="textbox">
+                    <input type="password" placeholder="Contraseña" name="password" required>
+                </div>
+                <input class="btn" type="submit" value="Registrarse">
+            </form>
+            <div class="extras">
+                <p><a href="login.html">¿Ya tienes una cuenta? Inicia sesión</a></p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
