--- a/Registro.html
+++ b/Registro.html
@@ -7,18 +7,21 @@
     <link rel="stylesheet" href="Registro.css">
 </head>
 <body>
-   
         <div class="register-box">
             <div class="logo"></div>
             <div class="Avion"></div>
             <h2>Registro</h2>
             <form action="#" method="post">
+                
+                <h4>Nombre de usuario</h4>
                 <div class="textbox">
                     <input type="text" placeholder="Nombre de usuario" name="username" required>
                 </div>
+                <h4>Nombre completo</h4>
                 <div class="textbox">
                     <input type="text" placeholder="Nombre completo" name="name" required>
                 </div>
+                <h4>Correo electronico</h4>
                 <div class="textbox">
                     <input type="text" placeholder="Correo electrónico" name="email" required>
                 </div>
@@ -30,6 +33,7 @@
                 <div class="textbox">
                     <input type="date"  name="fecha_nacimiento" required>
                 </div>
+                <h4>Genero</h4>
                 <div class="textbox">
                     <select name="genero" required>
                         <option value="" disabled selected>Selecciona tu género</option>
@@ -38,9 +42,11 @@
                         <option value="otro">Otro</option>
                     </select>
                 </div>
+                <h4>Contraseña</h4>
                 <div class="textbox">
                     <input type="password" placeholder="Contraseña" name="password" required>
                 </div>
+                <h4>Repetir contraseña</h4>
                 <div class="textbox">
                     <input type="password" placeholder="Repetir contraseña" name="passwordrep" required>
                 </div>
@@ -50,6 +56,5 @@
                 <p>¿Ya una cuenta?<a href="#">Iniciar sesión</a></p>
             </div>
         </div>
-    
 </body>
 </html>
